// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render snowIcon when the description includes the word snow) 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://www.free-icons-download.net/images/blue-snow-icon-38706.png"
  />
</div>
`;

exports[`Icon should render sunIcon when the description includes the word sun 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://www.pngmart.com/files/3/Sun-PNG-Photos.png"
  />
</div>
`;

exports[`Icon should show render rainIcon when the description includes the word rain 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://icons.iconarchive.com/icons/large-icons/large-weather/256/rain-icon.png"
  />
</div>
`;
